[package]
name    = "kari"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"

description   = "An embeddable programming language, writting in and for Rust"
documentation = "https://docs.rs/kari"
repository    = "https://github.com/kari-lang/kari/"
readme        = "README.md"
keywords      = ["embeddable", "programming", "language", "scripting", "configuration"]
categories    = ["command-line-utilities", "config", "development-tools"]
license       = "0BSD"

[dependencies]
acc_reader = "2.0.0"
clap       = "2.33.0"
decorum    = "0.3.1"
termion    = "1.5.4"
walkdir    = "2.2.9"
